--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         /* Ensure the heading text color and size */
         .section h2 {
             color: #be185d; /* Red for the heading */
-            font-size: 1.3em; /* Slightly smaller heading font size */
+            font-size: 1.5em; /* Heading font size */
             margin-bottom: 15px;
         }
 
@@ -156,91 +156,38 @@
                     <li><a href="https://aespasynkmy.github.io/home/" target="_blank"><img src="https://github.com/aespasynkmy/home/blob/main/synklogo.png?raw=true" alt="Logo" class="logo"></a></li>
                     <li><a href="https://weibo.com/5795013414/5181761783073918" target="_blank"><img src="https://github.com/aespasynkmy/home/blob/main/1.png?raw=true" alt="Karina">简介</a></li>
                     <li><a href="https://aespasynkmy.github.io/music/" target="_blank"><img src="https://github.com/aespasynkmy/home/blob/main/2.png?raw=true" alt="Giselle">来路</a></li>
-                    <li><a href="https://www.baidu.com/" target="_blank"><img src="https://github.com/aespasynkmy/home/blob/main/3.png?raw=true" alt="Winter">舞台</a></li>
-                    <li><a href="https://www.baidu.com/" target="_blank"><img src="https://github.com/aespasynkmy/home/blob/main/4.png?raw=true" alt="Ning">综艺</a></li>
+                    <li><a href="https://aespasynkmy.github.io/stage/" target="_blank"><img src="https://github.com/aespasynkmy/home/blob/main/3.png?raw=true" alt="Winter">舞台</a></li>
+                    <li><a href="https://aespasynkmy.github.io/varietyshow/" target="_blank"><img src="https://github.com/aespasynkmy/home/blob/main/4.png?raw=true" alt="Ning">综艺</a></li>
                 </ul>
             </nav>
         </header>
 
         <main>
-            <!-- 板块 1 -->
+
+                                                                                     <!-- 板块 11 -->
             <div class="section">
-                <h2>单曲合集</h2>
-                <p>aespa的单曲大全</p>
-                <a href="https://aespasynkmy.github.io/danqu/" class="link-button" target="_blank">
-                    🎶 详情
+                <h2>官方短剧 Who visit the VILLA?</h2>
+                <p>231121 EP01 Hide and Seek🧸</p>
+                <a href="https://www.bilibili.com/video/BV1ow411A7Ze/?spm_id_from=333.1387.search.video_card.click&vd_source=f1d1cd489066437ea7682d8329839f9c" class="link-button" target="_blank">
+                    🎥 观看视频
                 </a>
             </div>
 
-            <!-- 板块 2 -->
+                                                                                                 <!-- 板块 11 -->
             <div class="section">
-                <h2>Mini1</h2>
-                <p>Savage</p>
-                <a href="https://weibo.com/5795013414/5099115975021698" class="link-button" target="_blank">
-                    🎶 详情
+                <h2>官方短剧 Who visit the VILLA?</h2>
+                <p>231123 EP02 Who are you?🤖</p>
+                <a href="https://www.bilibili.com/video/BV1zC4y1P7Xs/?spm_id_from=333.1387.upload.video_card.click&vd_source=f1d1cd489066437ea7682d8329839f9c" class="link-button" target="_blank">
+                    🎥 观看视频
                 </a>
             </div>
 
-            <!-- 板块 3 -->
+                                                                                                 <!-- 板块 11 -->
             <div class="section">
-                <h2>Mini2</h2>
-                <p>Girls</p>
-                <a href="https://aespasynkmy.github.io/mini2/" class="link-button" target="_blank">
-                    🎶 详情
-                </a>
-            </div>
-
-            <!-- 板块 4 -->
-            <div class="section">
-                <h2>Mini3</h2>
-                <p>MY WORLD</p>
-                <a href="https://aespasynkmy.github.io/mini3/" class="link-button" target="_blank">
-                    🎶 详情
-                </a>
-            </div>
-
-            <!-- 板块 5 -->
-            <div class="section">
-                <h2>Mini4</h2>
-                <p>Drama</p>
-                <a href="https://weibo.com/5795013414/5096323892381666" class="link-button" target="_blank">
-                    🎶 详情
-                </a>
-            </div>
-
-            <!-- 板块 6 (新增) -->
-            <div class="section">
-                <h2>The 1th Album</h2>
-                <p>Armageddon</p>
-                <a href="https://aespasynkmy.github.io/t1a/" class="link-button" target="_blank">
-                    🎶 详情
-                </a>
-            </div>
-
-            <!-- 板块 7 (新增) -->
-            <div class="section">
-                <h2>日本出道专</h2>
-                <p>Hot Mess</p>
-                <a href="https://weibo.com/5795013414/5099482699533065" class="link-button" target="_blank">
-                    🎶 详情
-                </a>
-            </div>
-            
-            <!-- 板块 8 (新增) -->
-            <div class="section">
-                <h2>Mini5</h2>
-                <p>Whiplash</p>
-                <a href="https://weibo.com/5795013414/5094526905488463" class="link-button" target="_blank">
-                    🎶 详情
-                </a>
-            </div>
-
-            <!-- 板块 9 (新增) -->
-            <div class="section">
-                <h2>Mini6</h2>
-                <p>Rich Man</p>
-                <a href="https://weibo.com/5795013414/5207661885787641" class="link-button" target="_blank">
-                    🎶 详情
+                <h2>官方短剧 Who visit the VILLA?</h2>
+                <p>231125 EP03 Cruel Audition 🎬</p>
+                <a href="https://www.bilibili.com/video/BV1sN411M7aC/?spm_id_from=333.337.search-card.all.click&vd_source=f1d1cd489066437ea7682d8329839f9c" class="link-button" target="_blank">
+                    🎥 观看视频
                 </a>
             </div>
         </main>
@@ -265,6 +212,8 @@
     </script>
 </body>
 </html>
+
+
 
 
 
